--- a/about-al-fajer-fm/index.html
+++ b/about-al-fajer-fm/index.html
@@ -1070,7 +1070,7 @@
 																		<div
 																			class="wpb_text_column wpb_content_element ">
 																			<div class="wpb_wrapper">
-																				<p style="text-align: justify;">Our aim
+																				<p >Our aim
 																					as a facilities management company
 																					is to ensure the integration of
 																					people, technology and systems to
@@ -1083,7 +1083,7 @@
 																					lead the regional facilities
 																					management (FM) industry.</p>
 																				<p>&nbsp;</p>
-																				<p style="text-align: justify;">We plan
+																				<p >We plan
 																					to achieve this feat by delivering
 																					an experience to our clients that
 																					goes beyond services. We are driven
@@ -1145,7 +1145,7 @@
 																	<div class="separator  normal center  "
 																		style="margin-bottom: 5px;height: 2px;"></div>
 
-																	<p style="text-align: justify;">Meridian Prime
+																	<p >Meridian Prime
 																		Facilities Management Services LLC FM will be
 																		recognized for quality and customer excellence
 																		and be the benchmark for the FM industry in UAE.
@@ -1171,7 +1171,7 @@
 																	<div class="separator  normal center  "
 																		style="margin-bottom: 5px;height: 2px;"></div>
 
-																	<p style="text-align: justify;">Be a trusted partner
+																	<p >Be a trusted partner
 																		for our clients to foster an environment of
 																		innovation and service excellence. To maintain
 																		high ethical and professional standards, as we
@@ -1799,7 +1799,7 @@
 																		<div
 																			class="wpb_text_column wpb_content_element ">
 																			<div class="wpb_wrapper">
-																				<p style="text-align: justify;">At
+																				<p >At
 																					Meridian Prime Facilities Management
 																					Services LLC FM, we encourage and
 																					foster a culture that helps our
