--- a/cleaning/index.html
+++ b/cleaning/index.html
@@ -988,7 +988,7 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1529309825584">
 																		<div class="wpb_wrapper">
-																			<h1 style="text-align: justify;">CLEANING
+																			<h1 >CLEANING
 																			</h1>
 
 																		</div>
@@ -1008,8 +1008,8 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1596437989168">
 																		<div class="wpb_wrapper">
-																			<p style="text-align: justify;">Meridian Prime Facilities Management Services LLC
-																				Facilities Management&rsquo;s cleaning
+																			<p >Meridian Prime Facilities Management Services LLC
+																				Facilities Managements cleaning
 																				division is the largest division of the
 																				company. We have over 300 individuals
 																				trained as per the renowned BICS method,
@@ -1018,7 +1018,7 @@
 																				establishments across Dubai and the
 																				other emirates of the UAE.</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">This
+																			<p >This
 																				includes commercial cleaning for
 																				business establishments like cineplexes,
 																				corporate offices and buildings,
@@ -1027,31 +1027,31 @@
 																				like residential towers, communities,
 																				executive housekeeping and villas.</p>
 																			<p>&nbsp;</p>
-																			<h4 style="text-align: justify;">
+																			<h4 >
 																				<strong>What is different about Meridian Prime Facilities Management Services LLC
 																					FM&rsquo;s cleaning services
 																					division?</strong></h4>
-																			<p style="text-align: justify;">We consult
+																			<p >We consult
 																				with clients to develop bespoke cleaning
 																				programs and recommend solutions best
 																				suited for them.</p>
 																			<p></p>
-																			<p style="text-align: justify;">We are
+																			<p >We are
 																				committed to reducing the use of
 																				chemicals and water consumption while
 																				maintaining desired results.</p>
 																			<p></p>
-																			<p style="text-align: justify;">We research,
+																			<p >We research,
 																				identify and bring the latest
 																				technology, cleaning materials and
 																				solutions into the middle east region to
 																				our clients.</p>
-																			<p style="text-align: justify;">We set KPI
+																			<p >We set KPI
 																				driven benchmarks with clients for
 																				projects in cleaning and housekeeping,
 																				which enables them to measure their
 																				returns on their investment with us.</p>
-																			<p style="text-align: justify;">We are
+																			<p >We are
 																				working with hospitals and schools to
 																				develop clean and green services that
 																				use minimal chemicals while offering
