--- a/employees-are-the-brand-ambassadors/index.html
+++ b/employees-are-the-brand-ambassadors/index.html
@@ -909,10 +909,10 @@
 													</span>
 												</div>
 												<p></p>
-												<p style="text-align: justify;"><strong>Customer-facing FM employees are
+												<p ><strong>Customer-facing FM employees are
 														the brand ambassadors for properties and service
 														providers</strong></p>
-												<p style="text-align: justify;">Contemporary customers are not merely
+												<p >Contemporary customers are not merely
 													buying a product or availing a service, they are rather buying into
 													an experience or an idea. In response, businesses have shifted their
 													focus to facilitating these priorities, keeping the needs of their
@@ -920,9 +920,9 @@
 													managers, who have witnessed significant transformation in their
 													roles and responsibilities in recent years, transitioning from
 													service providers to customer-facing experience managers.</p>
-												<p style="text-align: justify;"><strong>Business branding is now about
+												<p ><strong>Business branding is now about
 														tangible customer benefits</strong></p>
-												<p style="text-align: justify;">Marketing, advertising and driving brand
+												<p >Marketing, advertising and driving brand
 													awareness are often high on the priority list of building owners.
 													Branding is vital in helping commercial real estate businesses
 													retain their existing tenants, besides attracting potential new
@@ -933,23 +933,23 @@
 													strategies. With customers exhibiting increasingly sophisticated and
 													discerning behavior, this conventional understanding of the term
 													&#8216;brand ambassador&#8217; is being reconsidered.</p>
-												<p style="text-align: justify;">Lately, FM employees, who are of often
+												<p >Lately, FM employees, who are of often
 													the face of a commercial real estate operation by virtue of their
 													visibility, have begun to assume the role of influencers, on the
 													basis of their interactions with building occupants and the quality
 													of the services they provide. In effect, these workforces are
 													emerging as facilitators of customer experiences, and consequently
 													brand ambassadors of a different variety.</p>
-												<p style="text-align: justify;">This new branding strategy is down to
+												<p >This new branding strategy is down to
 													multiple reasons. Customers increasingly assess brands on the basis
 													of whether or not they are receiving consistently high quality
 													experiences, across an entire spectrum of their needs, as opposed to
 													corporate marketing. The natural response to this trend is evident
 													in the new-found popularity of employee ambassadorship programs,
 													within customer-centric organizations.</p>
-												<p style="text-align: justify;"><strong>The inherent strengths of making
+												<p ><strong>The inherent strengths of making
 														employees brand ambassadors</strong></p>
-												<p style="text-align: justify;">Employee engagement has been proven
+												<p >Employee engagement has been proven
 													productive in terms of motivating, empowering and engaging the
 													workforce. Engaged FM employees are natural brand ambassadors,
 													capable of connecting with end users and promoting the business. In
@@ -963,16 +963,16 @@
 													translate to better customer retention, and give advocacy marketing
 													initiatives a context, as well as a far more receptive audience, in
 													a crowded market.</p>
-												<p style="text-align: justify;">Turning employees into brand ambassadors
+												<p >Turning employees into brand ambassadors
 													comes with hardly any pressures, in terms of additional investment
 													and ROI concerns. In fact, in some instances, engaged FM employees
 													have driven profitability and customer loyalty, while management has
 													concurrently cut costs associated with external branding services.
 													Compared to the revenue generated, costs incurred through in-house
 													employee ambassador programs are nominal.</p>
-												<p style="text-align: justify;"><strong>A closer look at the intricacies
+												<p ><strong>A closer look at the intricacies
 														involved</strong></p>
-												<p style="text-align: justify;">A critical part of ensuring the success
+												<p >A critical part of ensuring the success
 													of such programs is staff buy-in. FM leaders should address the
 													&#8220;what&#8217;s-in-it-for-me?&#8221; question from employees. In
 													order to do this, the program must clearly articulate its big
@@ -980,7 +980,7 @@
 													employees to enhance their professional skills and career
 													opportunities, as well as the creation of a business-wide aspiration
 													for excellence, are all valid means to achieve this.</p>
-												<p style="text-align: justify;">Ambassador programs usually include soft
+												<p >Ambassador programs usually include soft
 													skills training, general awareness on emerging trends, understanding
 													of company goals, access to resource materials, and lessons on how
 													to use them, among other elements. Measures should be taken to
@@ -991,8 +991,8 @@
 													Employee ambassadors who excel in their roles, and bring about
 													tangible benefits, should be rewarded with approbation, salary
 													bonuses and promotions.</p>
-												<p style="text-align: justify;"><strong>The bottomline</strong></p>
-												<p style="text-align: justify;">One of the major roadblocks to effective
+												<p ><strong>The bottomline</strong></p>
+												<p >One of the major roadblocks to effective
 													employee engagement in contemporary business culture is impersonal
 													interactions. Be it HR programs, information flow, work delegation
 													and more, business processes are devoid of personalization, which
@@ -1003,7 +1003,7 @@
 													deep seated goodwill for a brand, among customers, and FM employees
 													are in a unique position to constantly reinforce this positive
 													perception, through excellence in their everyday activities.</p>
-												<p style="text-align: justify;">If we ask ourselves who knows the brand
+												<p >If we ask ourselves who knows the brand
 													best, the answer is &#8217;employees&#8217;. They are privy to
 													organizational inner workings as much as they are aware of end user
 													expectations. While traditional corporate branding strategies have
@@ -1015,7 +1015,7 @@
 													employee engagement and in-house ambassador programmes, which are
 													designed to help employees illuminate their blind spots and hidden
 													strengths.</p>
-												<p style="text-align: justify;"> </p>
+												<p > </p>
 												<p></p>
 											</div>
 										</div>
