--- a/engineering/index.html
+++ b/engineering/index.html
@@ -1007,7 +1007,7 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1529322136524">
 																		<div class="wpb_wrapper">
-																			<h1 style="text-align: justify;">ENGINEERING
+																			<h1 >ENGINEERING
 																			</h1>
 
 																		</div>
@@ -1041,7 +1041,7 @@
 																				work, and emergency maintenance support.
 																			</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">Meridian Prime Facilities Management Services LLC FM
+																			<p >Meridian Prime Facilities Management Services LLC FM
 																				provides flexible and cost-effective
 																				solutions. We are proactive in our
 																				approach when it comes to your
@@ -1052,14 +1052,14 @@
 																				utilities and in turn, extend the
 																				lifespan of your assets.</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">Pest control
+																			<p >Pest control
 																				services for an effective treatment to
 																				keep your living space healthy. Our
 																				preventive treatments are tested for its
 																				efficiency as per UAE municipality
 																				norms.</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">Landscaping
+																			<p >Landscaping
 																				services for adding to the aesthetic
 																				beauty of your property. We provide
 																				complete packages that can include
@@ -1067,7 +1067,7 @@
 																				landscapes, turf pitches and much more.
 																			</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">Water tank
+																			<p >Water tank
 																				cleaning services to residential,
 																				commercial and industrial amenities.
 																				With our post cleaning test like
@@ -1078,7 +1078,7 @@
 																				hygienic water storage system for your
 																				use.</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">Wide range
+																			<p >Wide range
 																				of General maintenance services to cater
 																				the clients from their day to day
 																				household fit outs and maintenance works
