--- a/hospitality/index.html
+++ b/hospitality/index.html
@@ -1002,7 +1002,7 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1530033467621">
 																		<div class="wpb_wrapper">
-																			<h1 style="text-align: justify;">Hospitality
+																			<h1 >Hospitality
 																			</h1>
 
 																		</div>
@@ -1024,12 +1024,12 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1537771362751">
 																		<div class="wpb_wrapper">
-																			<p style="text-align: justify;">With the
+																			<p >With the
 																				ever-evolving hospitality market in the
 																				region, our hospitality division at Meridian Prime FM is adept to meet the industry
 																				needs with a host of services while
 																				ensuring unparalleled performance.</p>
-																			<p style="text-align: justify;">We provide
+																			<p >We provide
 																				highly professional and well-trained
 																				receptionists and concierge services.
 																				Housekeeping, stewards and catering
@@ -1037,7 +1037,7 @@
 																				Our employees are known for their
 																				excellent work ethics and positive
 																				attitude.</p>
-																			<p style="text-align: justify;">A fleet of
+																			<p >A fleet of
 																				young, adaptable staff with a pleasing
 																				personality are carefully selected to
 																				fit in to client requirements</p>
