--- a/security/index.html
+++ b/security/index.html
@@ -989,7 +989,7 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1529319001268">
 																		<div class="wpb_wrapper">
-																			<h1 style="text-align: justify;">SECURITY
+																			<h1 >SECURITY
 																			</h1>
 
 																		</div>
@@ -1009,14 +1009,14 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1596438040814">
 																		<div class="wpb_wrapper">
-																			<p style="text-align: justify;">Meridian Prime Facilities Management Services LLC
+																			<p >Meridian Prime Facilities Management Services LLC
 																				Facilities Management has a dedicated
 																				safety and loss prevention division. Our
 																				security division has over 250 highly
 																				skilled, licensed and certified
 																				employees to carry out various jobs.</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">Our security
+																			<p >Our security
 																				teams are driven by process-based
 																				surveillance methodology, ensuring
 																				movements are well recorded and
@@ -1031,7 +1031,7 @@
 																				and compliant with SIRA certification,
 																				as per the regional norms.</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">With a
+																			<p >With a
 																				quality control and audit procedures in
 																				place, our services are maintained at
 																				the optimum level that ensures you are
@@ -1047,7 +1047,7 @@
 
 																	<div class="wpb_text_column wpb_content_element ">
 																		<div class="wpb_wrapper">
-																			<h4 style="text-align: justify;">
+																			<h4 >
 																				<strong>Static Security
 																					Services</strong></h4>
 
@@ -1055,7 +1055,7 @@
 																	</div>
 																	<div class="wpb_text_column wpb_content_element ">
 																		<div class="wpb_wrapper">
-																			<p style="text-align: justify;">Our static
+																			<p >Our static
 																				security services include lifeguarding,
 																				concierge/ receptionists and community
 																				management services which include
@@ -1079,7 +1079,7 @@
 
 																	<div class="wpb_text_column wpb_content_element ">
 																		<div class="wpb_wrapper">
-																			<h4 style="text-align: justify;">
+																			<h4 >
 																				<strong>Close Security Services</strong>
 																			</h4>
 
@@ -1087,7 +1087,7 @@
 																	</div>
 																	<div class="wpb_text_column wpb_content_element ">
 																		<div class="wpb_wrapper">
-																			<p style="text-align: justify;">Meridian Prime Facilities Management Services LLC FM
+																			<p >Meridian Prime Facilities Management Services LLC FM
 																				has well-trained and dedicated security
 																				personnel with specialised defence
 																				training to provide security for VVIPs
@@ -1103,7 +1103,7 @@
 
 																	<div class="wpb_text_column wpb_content_element ">
 																		<div class="wpb_wrapper">
-																			<h4 style="text-align: justify;">
+																			<h4 >
 																				<strong>Club &amp; Events
 																					Security</strong></h4>
 
@@ -1111,7 +1111,7 @@
 																	</div>
 																	<div class="wpb_text_column wpb_content_element ">
 																		<div class="wpb_wrapper">
-																			<p style="text-align: justify;">We are proud
+																			<p >We are proud
 																				to have an in-house team of highly
 																				alert, certified security personnel
 																				being trained in appropriate crowd
