--- a/textured-paints/index.html
+++ b/textured-paints/index.html
@@ -1010,7 +1010,7 @@
 																	<div
 																		class="wpb_text_column wpb_content_element  vc_custom_1530033894140">
 																		<div class="wpb_wrapper">
-																			<p style="text-align: justify;">In 2016, Meridian Prime Facilities Management Services LLC Facilities Management extended the
+																			<p >In 2016, Meridian Prime Facilities Management Services LLC Facilities Management extended the
 																				portfolio of our Engineering Division by
 																				creating a new discipline, namely
 																				Texturized Paints. This department has
@@ -1018,7 +1018,7 @@
 																				trained applicators (painters) in the
 																				region.</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">We work for
+																			<p >We work for
 																				both commercial and residential
 																				contracts. Our teams undertake painting
 																				works for all types of establishments,
@@ -1035,7 +1035,7 @@
 																				moisture conditions etc. to create the
 																				most stunning finishes.</p>
 																			<p>&nbsp;</p>
-																			<p style="text-align: justify;">We are proud
+																			<p >We are proud
 																				to be trained directly by San Marco,
 																				Italy and pleased to represent them in
 																				the UAE region.</p>
