--- a/textured-paints/index.html
+++ b/textured-paints/index.html
@@ -1202,9 +1202,12 @@
 															<div id="text-5" class="widget widget_text">
 																<h5>Dubai</h5>
 																<div class="textwidget">
-																	<p>Office no: 1802C Ontario Tower, Business Bay, Dubai UAE.<br />
-																		Email: Info@Meridianprimefm.com<br />
-																		Phone: +97142991801</p>
+																	<p>
+																		Office no: 1802C Ontario Tower, Business Bay, Dubai UAE<br />
+																		Email: <a href="mailto:Info@Meridianprimefm.com">Info@Meridianprimefm.com</a><br />
+																		Email: <a href="mailto:Customerscare@Meridianprimefm.com">Customerscare@Meridianprimefm.com</a><br />
+																		Phone: <a href="tel:+97142991801">+97142991801</a>
+																	</p>
 																</div>
 															</div>
 														</div>
